Add more details in <head>

--- a/main_page.html
+++ b/main_page.html
@@ -1,14 +1,27 @@
-<html>
-
-<head "DOCTYPE=html"> <head> 
-
-<body>
 
 
+<!DOCTYPE html> 
+<html lang="en">
+
+
+    <link rel="stylesheet" media="screen" href="">
+    
+</head> 
+
+<body class="main_heading">
+
+    <div class="page-wrapper">
+
+
+        <div class = "Title-block">
 <h1>Bowling Green Transit History </h1>
+        </div>  
 
 <p></p>
 
+
+
+</div>
 </body>
 
 
