Add new main page content

--- a/main_page.html
+++ b/main_page.html
@@ -8,14 +8,37 @@
     
 </head> 
 
-<body class="main_heading">
+<body >
 
     <div class="page-wrapper">
+
 
 
         <div class = "Title-block">
 <h1>Bowling Green Transit History </h1>
         </div>  
+
+
+            <div class="center_info">
+
+                <ul>
+<li>Straight Lines</li>
+<li>Neighborhood Connectors</li>
+<li<>Shade and Seating</li>
+                </ul>
+                <button class="button">Click Here for More Info!</button>
+            </div>
+
+
+<div class="right_menu">
+
+    <p>Bowling Green</p>
+    <p>Louisville</p>
+
+
+</div>
+
+
 
 <p></p>
 
