Add CSS stylesheet and more headings

--- a/main_page.html
+++ b/main_page.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 
-    <link rel="stylesheet" media="screen" href="">
+    <link rel="stylesheet" media="screen" href="main_page.css">
     
 </head> 
 
@@ -21,6 +21,7 @@
 
             <div class="center_info">
 
+                <h2> A City Needs Three Things for Good Transit</h2>
                 <ul>
 <li>Straight Lines</li>
 <li>Neighborhood Connectors</li>
