--- a/main_page.html
+++ b/main_page.html
@@ -12,12 +12,17 @@
 
     <div class="page-wrapper">
 
+<div class=background-color">
 
 
-        <div class = "Title-block">
+
+
+    <div class = "main-heading">
 <h1>Bowling Green Transit History </h1>
+<p>The roads of our cities can tell us more than you think!</p>
         </div>  
 
+    </div>
 
             <div class="center_info">
 
@@ -29,6 +34,9 @@
                 </ul>
                 <button class="button">Click Here for More Info!</button>
             </div>
+
+
+
 
 
 <div class="right_menu">
