Added Hamburger Button!

--- a/main_page.html
+++ b/main_page.html
@@ -14,7 +14,9 @@
 
 <div class=background-color">
 
-
+<span class="nav_bar">
+    <button class="hamburger">Click Here!</button>
+</span>
 
 
     <div class = "main-heading">
