Added Form Details

--- a/main_page.html
+++ b/main_page.html
@@ -60,6 +60,8 @@
 
 <p>How many roads connect Bowling Green and Louisville?</p>
 
+
+<h3>Lessons Learned from Beargrass Creek</h3>
 <p>Historically during the mid to late 1800s, working class Catholic, Jewish, and Black Louisvillians lived nearest the floodplain of Beargrass Creek due to most of the land already being claimed by Protestant white settlers a few decades prior.  Today these historic working class neighborhoods became what is known as the Smoketown, Paristown Pointe, Germantown-Paristown, Shelby Park, Original Highlands and Schnitzelburg communities, easily identified by the abundance of historic shotgun style homes.
     Overtime, restrictions were put in place to ban black residents from owning houses in the majority-white and wealthier sections of town and decisions were made by white politicians that severely impacted the lives and livelihoods of black neighborhoods across Louisville.
     We can see this directly by looking at the 2010 Census data, available from the Cooper Center at the University of Virginia.
@@ -83,9 +85,9 @@
     Beargrass Creek is a creek in majority white neighborhoods along Poplar Level Road as well as majority white Butchertown but is channelized into a concrete ditch as it flows through Germantown and Smoketown.
     Currently, a study is underway by the Army Corps to restore Beargrass Creek, but we need to keep pushing for ways for residents to cross in order to access amenities and safer paths home. This can be a way to heal past transgressions against minority communities.</p>
 </p>
-<form>
-
-    
+<form action="main_page.html" method="post">
+<h1>Sign Up to Learn More! </h1>
+    <input type="text" id="name" name="user_name">
 </form>
 
 
