More Form Inputs

--- a/main_page.html
+++ b/main_page.html
@@ -88,6 +88,8 @@
 <form action="main_page.html" method="post">
 <h1>Sign Up to Learn More! </h1>
     <input type="text" id="name" name="user_name">
+    <input type="email" id="mail" name="user_email">
+    <input type="password" id="password" name="user_password">
 </form>
 
 
