First Time Javascript!

--- a/main_page.html
+++ b/main_page.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" media="screen" href="main_page.css">
     
 </head> 
-
-<body >
-
+<meta charset="UTF-8">
+<body>
+    <script src=mainpage.js"></script></script>
     <div class="page-wrapper">
 
 <div class=background-color">
