Made new nav bar with Flexbox!

--- a/main_page.html
+++ b/main_page.html
@@ -17,12 +17,13 @@
 <header>
     <span class="nav-bar">
         <ul class="container"> 
+            <div>
             <li class="item-1">East-West</li>
+        </div>
             <li class="item-2">North-South</li>
             <li class="item-3">Greater West KY</li>
         </ul>
-    <button class="hamburger">Click Here!</button>
-</span>
+    </span>
 
 </header>
     <div class = "main-heading">
