Added more text

--- a/main_page.html
+++ b/main_page.html
@@ -52,9 +52,10 @@
 
 
 <div class="right_menu">
-
-    <p>Bowling Green</p>
-    <p>Louisville</p>
+    <h3>How does Kentucky Transit Measure Up?</h3>
+    <p>We are going to be doing a deep dive into two major cities in our state:</p>
+    <br>
+    <p> Louisville, the largest city in our state, and Bowling Green, the third largest. </p>
 
 
 </div>
