Added more Div and P tags

--- a/main_page.html
+++ b/main_page.html
@@ -15,15 +15,15 @@
 <div class=background-color">
 
 <header>
-    <span class="nav-bar">
+    <nav class="nav-bar">
         <ul class="container"> 
             <div>
-            <li class="item-1">East-West</li>
+            <li class="item">Short History</li>
         </div>
-            <li class="item-2">North-South</li>
-            <li class="item-3">Greater West KY</li>
+            <li class="item">Louisville</li>
+            <li class="item">Bowling Green</li>
         </ul>
-    </span>
+    </nav>
 
 </header>
     <div class = "main-heading">
@@ -54,13 +54,22 @@
 <div class="right_menu">
     <h3>How does Kentucky Transit Measure Up?</h3>
     <p>We are going to be doing a deep dive into two major cities in our state:</p>
-    <br>
-    <p> Louisville, the largest city in our state, and Bowling Green, the third largest. </p>
 
+    <p> Louisville, the largest city in our state, and Bowling Green, the third largest. </p>
 
 </div>
 
-<p>How many roads connect Bowling Green and Louisville?</p>
+<div class="item-3 heading">
+
+<h2>A Short History</h2>
+
+<p>Originally，all cities in Kentucky were connected by wagon trails,then stagecoach, streetcar, train , boat and automobile!</p>
+
+<p> Unfortunately, in 2020 most of our transportation network is only built for cars. This is problematic in a variety of ways. </p>
+
+</div>
+
+
 
 
 <h3>Lessons Learned from Beargrass Creek</h3>
@@ -100,7 +109,14 @@
 			<label>What are you interested in learning more about?:</label>
 			<input type="checkbox" id="development" name="user_interest"><label for="development">Bowling Green</label><br>
 			<input type="checkbox" id="design" name="user_interest"><label for="design">Louisville</label><br>
-			<input type="checkbox" id="business" name="user_interest"><label for="business">Transit! </label><br>
+            <input type="checkbox" id="business" name="user_interest"><label for="business">Transit! </label><br>
+            
+            <select id="select_reason">
+                <option value="1"> </option>
+
+
+
+            </select>
 			
      	<label for="msg">Message:</label>			
  			<textarea id="msg" rows="4"></textarea>
