--- a/main_page.html
+++ b/main_page.html
@@ -9,7 +9,7 @@
 </head> 
 <meta charset="UTF-8">
 <body>
-    <script src=mainpage.js"></script></script>
+    <script src=index.js"></script></script>
     <div class="page-wrapper">
 
 <div class=background-color">
@@ -24,7 +24,30 @@
             <li class="item">Bowling Green</li>
         </ul>
     </nav>
+<div id="myCarousel" class="carousel slide">
 
+<ol class="carousel-indicators">
+    <li data-target=#myCarousel" data-slide-to="1" class="active"></li>
+
+    <!--Wrapper for slides-->
+<div class="carousel-inner">
+    <div class="item-active">
+        <img src="www.github.com/jodydahmer/bgmaps/lvl_racemap" alt="2010 Racial Map of Louisville" class="src">
+
+
+    </div>
+
+
+
+
+</div>
+
+</ol>
+
+
+
+
+</div>
 </header>
     <div class = "main-heading">
 <h1>Bowling Green Transit History </h1>
