--- a/main_page.html
+++ b/main_page.html
@@ -24,18 +24,6 @@
             <li class="item">Bowling Green</li>
         </ul>
     </nav>
-<div id="myCarousel" class="carousel slide">
-
-<ol class="carousel-indicators">
-    <li data-target=#myCarousel" data-slide-to="1" class="active"></li>
-
-    <!--Wrapper for slides-->
-<div class="carousel-inner">
-    <div class="item-active">
-        <img src="www.github.com/jodydahmer/bgmaps/lvl_racemap" alt="2010 Racial Map of Louisville" class="src">
-
-
-    </div>
 
 
 
@@ -83,6 +71,29 @@
 </div>
 
 <div class="item-3 heading">
+
+
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="..." alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
 
 <h2>A Short History</h2>
 
