Added calculator for JS functions

--- a/main_page.html
+++ b/main_page.html
@@ -21,7 +21,7 @@
             <li class="item">Short History</li>
         </div>
             <li class="item">Louisville</li>
-            <li class="item">Bowling Green</li>
+            <li class="item"></li>
         </ul>
     </nav>
 
@@ -33,12 +33,12 @@
 </ol>
 
 
-
+<script src=commuteCalc.js></script>
 
 </div>
 </header>
     <div class = "main-heading">
-<h1>Bowling Green Transit History </h1>
+<h1>Commute Calculator!  </h1>
 <p>The roads of our cities can tell us more than you think!</p>
         </div>  
 
