Added better hamburger menu with img tags

--- a/main_page.html
+++ b/main_page.html
@@ -5,11 +5,14 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" media="screen" href="main_page.css">
-    
 </head> 
 <meta charset="UTF-8">
 <body>
-    <script src=index.js"></script></script>
+<div class="menu-button">
+        <div class="menu-button-burger"></div>
+</div>
+
+    <script src=main.js"></script>
     <div class="page-wrapper">
 
 <div class=background-color">
@@ -96,12 +99,15 @@
       </div>
 
 <h2>A Short History</h2>
+<img src=https://github.com/jodydahmer/bg_maps/blob/master/Lvl_streetcar.jpg alt=A Louisville Street in early 20th century width=50%> 
 
 <p>Originally，all cities in Kentucky were connected by wagon trails,then stagecoach, streetcar, train , boat and automobile!</p>
 
 <p> Unfortunately, in 2020 most of our transportation network is only built for cars. This is problematic in a variety of ways. </p>
 
 </div>
+
+<img src=https://github.com/jodydahmer/bg_maps/blob/master/lvl_railmap.jpg alt="A railmap of Louisville" width=50%> 
 
 
 
