Added grid practice, new BG pics

--- a/main_page.html
+++ b/main_page.html
@@ -15,35 +15,25 @@
     <script src=main.js"></script>
     <div class="page-wrapper">
 
-<div class=background-color">
+
 
 <header>
     <nav class="nav-bar">
         <ul class="container"> 
-            <div>
-            <li class="item">Short History</li>
-        </div>
-            <li class="item">Louisville</li>
-            <li class="item"></li>
+            <li class="item" href="#">Short History</li>
+            <li class="item" href="#">Louisville</li>
         </ul>
     </nav>
 
 
+</header>
 
 
-</div>
 
-</ol>
 
 
 <script src=commuteCalc.js></script>
 
-</div>
-</header>
-    <div class = "main-heading">
-<h1>Commute Calculator!  </h1>
-<p>The roads of our cities can tell us more than you think!</p>
-        </div>  
 
     </div>
 
@@ -136,6 +126,19 @@
     Beargrass Creek is a creek in majority white neighborhoods along Poplar Level Road as well as majority white Butchertown but is channelized into a concrete ditch as it flows through Germantown and Smoketown.
     Currently, a study is underway by the Army Corps to restore Beargrass Creek, but we need to keep pushing for ways for residents to cross in order to access amenities and safer paths home. This can be a way to heal past transgressions against minority communities.</p>
 </p>
+
+
+</div>
+
+    <div class = "main-heading">
+<h1>Commute Calculator!  </h1>
+<p>The roads of our cities can tell us more than you think!</p>
+        </div>  
+
+
+
+
+
 	<div id="container">
 		<form class="form-contact br">
 	  	<h1>Contact</h1>
