Replace Pages Link

--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-<h1>New Webpage Test on Github Pages!<h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title > BG Maps!</title>
+<script type="text/javascript" src="grid.js"></script>
+<link rel
+<link  href='grid.css' rel='stylesheet' type='text/css'>
+<link href='normalize.css' rel='stylesheet' type='text/css'>
+<link href='clearfix.css' rel='stylesheet' type='text/css'
+</head>
+<body>
+
+
+    <nav>
+        <ul>
+            <li href= "#" class="nav-heading"> Transit History </li>
+            <li href= "#" class="nav-heading"> Bowling Green Maps </li>
+            <li href= "#" class="nav-heading">Contact </li>
+        </ul>
+    </nav>
+
+<div class="grid">
+    <div class="item">1
+        <img src="Lvl_streetcar.jpg" alt="A nice city streetscape in Louisville pre-automobile">
+    </div>
+
+    <div class="item">
+            
+        <h2>A Short History of Kentucky Transit</h2>
+
+        <p>Kentucky History goes WAY back. The state was founded in (X) , and Bowling Green was founded in (X). 
+        <br>
+        <p> Remember that the car wasn't widely available until the 20th century, meaning that for Kentuckians to get around, they needed some different infrastructure</p>
+    </div>
+    <div class="item">2
+        <img src=
+    </div>
+  
+    <div class="item">
+
+        <p>Originally, the railroad was the economic center of Bowling Green. As a result, neighborhoods on either side of the tracks like Delafield began to form. The railroad offered direct routes to Nashville and Louisville within a short walk of their home. 
+
+        <p>Railroads cut off section of town due to their nature. However ,there are ways to help connect communities across the tracks in order for our seniors to be able to have to live independently when they become too old to drive. </p>
+    
+        <p>For many families, multiple cars are out of the budget. As a result, these residents lose access to stores and locations that BG Transit currently doesn’t have stations. </p>
+
+    </div>
+
+    <div class="item">
+        <h3>Why does accessibility through roads matter?</h3>
+
+        <p> Our roads need to take care of everyone in the city, especially our children and senior residents. For many families, multiple cars are out of the budget. Taking out car loans and going deeper into dept is a reality for many young families that otherwise lose access to other neighbrohoods </p>
+            </p>
+    </div>
+    <div class="item">
+        <h3>Hidden Divides in our Cities</h3>
+        <p>Some divides are natural, like a creek or river. Others are man-made. The railroad and interstate highways often leave residents without a car stranded on one side of the tracks. Without any motivation to connect these neighborhoods, once our seniors get too old to drive this could mean they lose access to family , shopping, and most importantly connection to others.</p>
+    </div>
+    <div class="item">
+        <h3>What does it say about BG?</h3>
+
+           <p> There are only 11 roads in the city that cross the railroad tracks. </p>
+            <p>The residents of Bowling Green need to be able to get between our neighborhoods safely and quickly. Our elderly and disabled residents deserve to be able to get connected to essential services.</p>            
+            </h3>
+    </div>
+
+
+
+
+</div>
+</body>
+
+
+</html>
