Added new img and p tags for BG

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p> Remember that the car wasn't widely available until the 20th century, meaning that for Kentuckians to get around, they needed some different infrastructure</p>
     </div>
     <div class="item">2
-        <img src=
+        <img src="BG_RaceMap.png" alt= "2010 Census Data showing racial divide at railroad tracks">
     </div>
   
     <div class="item">
