--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
 
            <p> There are only 11 roads in the city that cross the railroad tracks. </p>
             <p>The residents of Bowling Green need to be able to get between our neighborhoods safely and quickly. Our elderly and disabled residents deserve to be able to get connected to essential services.</p>            
-            </h3>
+           
     </div>
 
-
+    <div class="item"> 
+        <img src=BG_RR_Cross.png alt = "BG Railroad Crossing Map"
+    </div>
 
 
 </div>
