Fleshed out JS and added a r r a y s

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <h2>So where does my commute time factor into all this?</h2>
         <p>Commute Times add up!</p>
         <script src=grid.js>
-              document.getElementById("output").innerHTML = carCommuteTime; 
+              print(carCommuteTime);
         </script>
 <div 
         <p> You said you commuted ${carCommuteTime} minutes to work</p>
@@ -146,7 +146,7 @@
 
 <div id="container">
     <form class="form-contact br">
-      <h1>Contact</h1>
+      <h1 class="contact-h1">Contact</h1>
 
       <label for="name">Name:</label> 
       <input type="text" id="name">
