--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <script type="text/javascript" src="grid.js"></script>
-<script type="text/javascript" src="carousel.js"></script>
 <link  href= 'grid.css' rel='stylesheet' type='text/css'>
 <link href='normalize.css' rel='stylesheet' type='text/css'>
 <link href='clearfix.css' rel='stylesheet' type='text/css'>
@@ -28,7 +27,7 @@
 
     <div class="item">
             
-        <h1>A Short History of Kentucky Transit</h1>
+        <h1>Bowling Green Kentucky and Commute Times</h1>
 <br>
 <!-- IMAGE CAROUSEL  -->
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
