Changed media queries

--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
 
 <!-- Contact Form -->
 
-
 <div id="container">
     <form class="form-contact br">
       <h1 class="contact-h1">Contact</h1>
@@ -175,7 +174,7 @@
       <input class="btn default" type="submit" value="Submit">
       <button type="reset">Start Over</button>
     </form>
-</div>
+
 
 
 </div>
@@ -184,5 +183,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 
-
+<footer> Copyright 2020 </footer>
 </html>
