Redid some p tags

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 
 <!-- More Text and Pics -->
     <div class="item intro">
-        <p>Kentucky History goes WAY back. The state was founded in (X) , and Bowling Green was founded in (X). 
+        
         <br>
         <h1> Why does accessibility through roads matter?</h1>
 
          <p> Roads are meant to get people, us, and our families to wherever we want to go . For most people, that means speeding as fast as you can to get to your parking lot as quickly as possible. <p></p>
-             <p>Remember that the car wasn't widely available until the 20th century, meaning that for Kentuckians to get around, they needed some different infrastructure</p>
+             <p>Remember that the car wasn't widely available until the 20th century, meaning that for Kentuckians to get around, they needed some different infrastructure<p>Kentucky History goes WAY back. The state was founded in (X) , and Bowling Green was founded in (X). </p>
     </div>
 
     <div class="item picture">
