--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
         <!-- Link map here. Explain in simple terms the map.
          -->
         
-</div>
+
 
 <!-- Contact Form -->
-
+<div class="item">
 <div id="container">
     <form class="form-contact br">
       <h1 class="contact-h1">Contact</h1>
@@ -164,7 +164,7 @@
         <select id="select_reason">
             <option value="1"> </option>
 
-
+        </div>
 
         </select>
         
@@ -175,7 +175,7 @@
       <button type="reset">Start Over</button>
     </form>
 
-
+</div>
 
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
