Picture link didn't work

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ For many families, multiple cars are out of the budget. As a result, multiple ge
         <br>
         <p>Absolutely! </p>
 
-        <img src= "BG_RR_Intersections.png"
+        <img src= "BG_RR_Intersections.png" alt="A map of Railroad intersections in Bowling Green Kentucky"
         <br>
         <article>
             Bowling Green has a grid downtown, but it is used inefficiently. As a result, neighborhoods and residents are isolated from one another and as a result all commerce suffers. By building a connected city, we can decrease the time it takes to move around Bowling Green, and incentivize smart development along the main corridors of our city. 
