Making sure looks good on other computers

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ alert("You have entered an invalid email address!");
 document.form1.text1.focus();
 return false;
 }
-}
+
      </script>
       <br>
         <br><label>What are you interested in learning more about?:</label>
@@ -192,7 +192,7 @@ return false;
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 
-     <aside>Check out more information about maps and other stuff <a href=www.beargrassthunder.com> here! </a> </a></aside>
-     <footer>Code Louisville Front End Project</footer>
+     <aside>Check out more information about maps and other stuff <a href=www.beargrassthunder.com> here! </a> </aside>
+     <footer> Code Louisville Front End Project Big Rona 2020 </footer>
   </body>
 </html>
