--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ For many families, multiple cars are out of the budget. As a result, multiple ge
  
 
     <div class="item important">
-        <h3>Why does accessibility through roads matter?</h3>
+        <h3>So...why should I care?</h3>
 
-        <p> Our roads need to take care of everyone in the city, especially our children and senior residents. For many families, multiple cars are out of the budget. Taking out car loans and going deeper into dept is a reality for many young families that otherwise lose access to other neighbrohoods </p>
+        <p> Our roads need to take care of everyone in the city, especially our children and senior residents. What is going to happen to our parents when they get too old to drive? For many families, multiple cars are out of the budget. Taking out car loans and going deeper into dept is a reality for many young families that otherwise lose access to other neighbrohoods </p>
             </p>
   
   
@@ -120,7 +120,7 @@ For many families, multiple cars are out of the budget. As a result, multiple ge
         <br>
         <p>Absolutely! </p>
 
-        <img src= "BG_RR_Intersections.png" alt="A map of Railroad intersections in Bowling Green Kentucky"
+        <img  src= "BG_RR_Intersections.png" alt="A map of Railroad intersections in Bowling Green Kentucky"
         <br>
         <article>
             Bowling Green has a grid downtown, but it is used inefficiently. As a result, neighborhoods and residents are isolated from one another and as a result all commerce suffers. By building a connected city, we can decrease the time it takes to move around Bowling Green, and incentivize smart development along the main corridors of our city. 
